--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -3,8 +3,14 @@ steps:
   - id: 'build'
     name: ':bazel: Build'
     commands: './.buildkite/build.sh'
+    agents:
+      queue: "dopsBazel"
 
   - id: 'unit-test'
     name: ':bazel: Test'
     parallelism: 4
     commands: './.buildkite/test.sh'
+    agents:
+      queue: "dopsBazel"
+
+
